--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.scss" />
     <title>Template</title>
   </head>
   <body>
     <div id="app"></div>
+
+    <!-- main -->
+    <main></main>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
