--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
 
     <!-- main -->
-    <main></main>
+    <main><h1>KENNY</h1></main>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
